--- a/app/globals.css
+++ b/app/globals.css
@@ -3,25 +3,132 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --primary-color: #047aed;
+  --secondary-color: #1c3fa8;
+  --dark-color: #002240;
+  --light-color: #f4f4f4;
+  --success-color: #5cb85c;
+  --error-color: #d9534f;
+}
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+.bg-dark {
+  background-color: var(--dark-color);
+  color: #fff;
+}
+
+header {
+  height: 45vh;
+  background-image: linear-gradient(to top, #0051d6 0%, #0061ff 100%);
+  position: relative;
+}
+.main {
+  margin-bottom: 0.5em;
+  text-transform: none;
+  font-size: 2em;
+  padding-top: 0.1em;
+  text-align: left;
+  font-weight: 800;
+}
+.second {
+  color: #bfd8ff;
+  line-height: 1.7;
+  font-weight: 400;
+  display: block;
+  margin-block-start: 1em;
+  margin-block-end: 1em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+}
+
+.slide-in-left {
+  animation: slideInFromLeft;
+  animation-duration: 0.8s;
+  animation-fill-mode: both;
+  animation-timing-function: ease-out;
+  transition-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+}
+
+.slide-in-right {
+  animation: slideInFromRight;
+  animation-duration: 0.8s;
+  animation-fill-mode: both;
+  animation-timing-function: ease-out;
+  transition-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+}
+.slide-in-bottom {
+  animation: slideInFromBottom;
+  animation-duration: 0.8s;
+  animation-fill-mode: both;
+  animation-timing-function: ease-out;
+  transition-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+}
+.cut {
+  overflow: hidden;
+  width: 100%;
+  margin-top: -3.05em;
+  height: 3.1em;
+  z-index: 100;
+  position: relative;
+}
+.wave {
+  fill-rule: evenodd;
+  clip-rule: evenodd;
+  stroke-linejoin: round;
+  stroke-miterlimit: 1.41421;
+}
+
+.project{
+  box-shadow: 0 3px 10px rgba(50,50,50,.05);
+    border: 1px solid #f7f7f7;
+    border-radius: 5px;
+    padding: 1.5em;
+    background-color: #fff;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+}
+/* Animations */
+@keyframes slideInFromLeft {
+  0% {
+    transform: translateX(-100%);
+  }
+
+  100% {
+    transform: translateX(0);
   }
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+@keyframes slideInFromRight {
+  0% {
+    transform: translateX(100%);
+  }
+
+  100% {
+    transform: translateX(0);
+  }
+}
+
+@keyframes slideInFromTop {
+  0% {
+    transform: translateY(-100%);
+  }
+
+  100% {
+    transform: translateX(0);
+  }
+}
+
+@keyframes slideInFromBottom {
+  0% {
+    transform: translateY(100%);
+  }
+
+  100% {
+    transform: translateX(0);
+  }
 }
